force-app/main/default/objects/VlocityEPCDeployment__c/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Environment</label>
    <referenceTo>copado__Environment__c</referenceTo>
    <relationshipLabel>EPC Deployments</relationshipLabel>
    <relationshipName>EPC_Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>