force-app/main/default/objects/VlocityEPCDeployment__c/fields/Job_Execution__c.field-meta.xml
<CustomField>
    <fullName>Job_Execution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Execution</label>
    <referenceTo>copado__JobExecution__c</referenceTo>
    <relationshipLabel>EPC Deployments</relationshipLabel>
    <relationshipName>EPC_Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>