force-app/main/default/objects/VlocityEPCDeployment__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Result</label>
    <referenceTo>copado__Result__c</referenceTo>
    <relationshipLabel>EPC Deployments</relationshipLabel>
    <relationshipName>EPC_Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>