force-app/main/default/objects/VlocityEPCDeployment__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>VlocityEPCConfiguration__c</referenceTo>
    <relationshipLabel>EPC Deployments</relationshipLabel>
    <relationshipName>EPC_Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>